Fixed jar running